--- a/tests/test_epitope_harmony.ipynb
+++ b/tests/test_epitope_harmony.ipynb
@@ -286,7 +286,7 @@
     ")\n",
     "\n",
     "# Create a \"flipped\" version of the `activity_wt_df`\n",
-    "two_df[\"escape\"] = one_df.escape[5: 10].tolist() + one_df.escape[0: 5].tolist()\n",
+    "two_df[\"escape\"] = one_df.escape[5:10].tolist() + one_df.escape[0:5].tolist()\n",
     "\n",
     "# Create polyclonal objects (can't seem to edit `mut_escape_df` bc it's a property)\n",
     "original_poly = Polyclonal(\n",
@@ -976,35 +976,27 @@
    ],
    "source": [
     "assert not any(\n",
-    "    flipped_poly.mut_escape_df\n",
-    "    [[\"epitope\", \"mutation\", \"escape\"]]\n",
+    "    flipped_poly.mut_escape_df[[\"epitope\", \"mutation\", \"escape\"]]\n",
     "    .merge(original_poly.mut_escape_df, how=\"outer\", on=[\"epitope\", \"mutation\"])\n",
-    "    .assign(equal=lambda x: x[\"escape_x\"] == x[\"escape_y\"])\n",
-    "    [\"equal\"]\n",
+    "    .assign(equal=lambda x: x[\"escape_x\"] == x[\"escape_y\"])[\"equal\"]\n",
     ")\n",
     "assert not any(\n",
-    "    flipped_poly.activity_wt_df\n",
-    "    [[\"epitope\", \"activity\"]]\n",
+    "    flipped_poly.activity_wt_df[[\"epitope\", \"activity\"]]\n",
     "    .merge(original_poly.activity_wt_df, how=\"outer\", on=[\"epitope\"])\n",
-    "    .assign(equal=lambda x: x[\"activity_x\"] == x[\"activity_y\"])\n",
-    "    [\"equal\"]\n",
+    "    .assign(equal=lambda x: x[\"activity_x\"] == x[\"activity_y\"])[\"equal\"]\n",
     ")\n",
     "\n",
     "map_df = flipped_poly.harmonize_epitopes_with(original_poly)\n",
     "\n",
     "assert all(\n",
-    "    flipped_poly.mut_escape_df\n",
-    "    [[\"epitope\", \"mutation\", \"escape\"]]\n",
+    "    flipped_poly.mut_escape_df[[\"epitope\", \"mutation\", \"escape\"]]\n",
     "    .merge(original_poly.mut_escape_df, how=\"outer\", on=[\"epitope\", \"mutation\"])\n",
-    "    .assign(equal=lambda x: x[\"escape_x\"] == x[\"escape_y\"])\n",
-    "    [\"equal\"]\n",
+    "    .assign(equal=lambda x: x[\"escape_x\"] == x[\"escape_y\"])[\"equal\"]\n",
     ")\n",
     "assert all(\n",
-    "    flipped_poly.activity_wt_df\n",
-    "    [[\"epitope\", \"activity\"]]\n",
+    "    flipped_poly.activity_wt_df[[\"epitope\", \"activity\"]]\n",
     "    .merge(original_poly.activity_wt_df, how=\"outer\", on=[\"epitope\"])\n",
-    "    .assign(equal=lambda x: x[\"activity_x\"] == x[\"activity_y\"])\n",
-    "    [\"equal\"]\n",
+    "    .assign(equal=lambda x: x[\"activity_x\"] == x[\"activity_y\"])[\"equal\"]\n",
     ")\n",
     "\n",
     "map_df"
