--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -20,7 +20,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "7f2bd96d-b693-4a82-856c-edf6a85ec89a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-14T21:16:59.093739Z",
+     "iopub.status.busy": "2022-03-14T21:16:59.093424Z",
+     "iopub.status.idle": "2022-03-14T21:17:00.708486Z",
+     "shell.execute_reply": "2022-03-14T21:17:00.707557Z",
+     "shell.execute_reply.started": "2022-03-14T21:16:59.093653Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -44,7 +52,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "a212ce8e-b374-4cbb-9bd1-e6543972b4e6",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-14T21:17:00.712275Z",
+     "iopub.status.busy": "2022-03-14T21:17:00.711999Z",
+     "iopub.status.idle": "2022-03-14T21:17:00.783689Z",
+     "shell.execute_reply": "2022-03-14T21:17:00.782908Z",
+     "shell.execute_reply.started": "2022-03-14T21:17:00.712246Z"
+    }
+   },
    "outputs": [],
    "source": [
     "activity_wt_df = pd.DataFrame({\"epitope\": [\"1\", \"2\"], \"activity\": [2.0, 1.0]})\n",
@@ -117,7 +133,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "a92c97a0-6447-4655-bdd6-49301f98f11b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-14T21:17:00.789831Z",
+     "iopub.status.busy": "2022-03-14T21:17:00.789434Z",
+     "iopub.status.idle": "2022-03-14T21:17:00.800457Z",
+     "shell.execute_reply": "2022-03-14T21:17:00.799811Z",
+     "shell.execute_reply.started": "2022-03-14T21:17:00.789797Z"
+    }
+   },
    "outputs": [],
    "source": [
     "boot_df = boot.create_bootstrap_sample(data_to_fit)\n",
@@ -144,7 +168,16 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "04a1937a-9241-4f24-91c5-b5513e042002",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-14T21:17:00.803382Z",
+     "iopub.status.busy": "2022-03-14T21:17:00.803238Z",
+     "iopub.status.idle": "2022-03-14T21:17:00.953498Z",
+     "shell.execute_reply": "2022-03-14T21:17:00.952091Z",
+     "shell.execute_reply.started": "2022-03-14T21:17:00.803362Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "n_samps = 5\n",
@@ -176,9 +209,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "3ce1356d-9c5d-4b83-85d1-c2c2cdd0b8fb",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-14T21:17:00.959302Z",
+     "iopub.status.busy": "2022-03-14T21:17:00.958854Z",
+     "iopub.status.idle": "2022-03-14T21:17:01.057716Z",
+     "shell.execute_reply": "2022-03-14T21:17:01.056655Z",
+     "shell.execute_reply.started": "2022-03-14T21:17:00.959236Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Do two different seeds generate different objects?\n",
@@ -192,9 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "781ad89f-9e61-4708-81d8-91fc89f2ed25",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-14T21:17:01.061969Z",
+     "iopub.status.busy": "2022-03-14T21:17:01.061716Z",
+     "iopub.status.idle": "2022-03-14T21:17:01.161710Z",
+     "shell.execute_reply": "2022-03-14T21:17:01.160766Z",
+     "shell.execute_reply.started": "2022-03-14T21:17:01.061938Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# What if we use the same seed with multiple threads?\n",
@@ -217,9 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "c6185dc5-6d1a-4975-92b2-5cd7fd6c6b58",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-14T21:17:01.165856Z",
+     "iopub.status.busy": "2022-03-14T21:17:01.165570Z",
+     "iopub.status.idle": "2022-03-14T21:17:01.449365Z",
+     "shell.execute_reply": "2022-03-14T21:17:01.448752Z",
+     "shell.execute_reply.started": "2022-03-14T21:17:01.165820Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Test to ensure that parameters change during fitting.\n",
@@ -232,10 +290,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "191a9185-f1d3-4271-8116-fd0a47b788ba",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-14T21:17:01.452209Z",
+     "iopub.status.busy": "2022-03-14T21:17:01.452022Z",
+     "iopub.status.idle": "2022-03-14T21:17:02.003728Z",
+     "shell.execute_reply": "2022-03-14T21:17:02.002837Z",
+     "shell.execute_reply.started": "2022-03-14T21:17:01.452191Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 0)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Test `fit_models()` with kwargs -- shouldn't throw any errors\n",
     "pc_copy.fit_models(fit_site_level_first=False)"
@@ -251,9 +328,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "7ec43240-d74a-49d8-97e4-1e45e45923df",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-14T21:17:02.008006Z",
+     "iopub.status.busy": "2022-03-14T21:17:02.007830Z",
+     "iopub.status.idle": "2022-03-14T21:17:02.089798Z",
+     "shell.execute_reply": "2022-03-14T21:17:02.088621Z",
+     "shell.execute_reply.started": "2022-03-14T21:17:02.007981Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Create a list of prediction dataframes from bootstrapped models\n",
@@ -267,9 +352,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "55c4be49-be98-425b-877f-8ae37153f8fd",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-14T21:17:02.091971Z",
+     "iopub.status.busy": "2022-03-14T21:17:02.091559Z",
+     "iopub.status.idle": "2022-03-14T21:17:02.113689Z",
+     "shell.execute_reply": "2022-03-14T21:17:02.113031Z",
+     "shell.execute_reply.started": "2022-03-14T21:17:02.091934Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Aggregate the results\n",
@@ -297,9 +390,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "52fdcd43-655e-4fee-8de2-4996e3ba8307",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-14T21:17:02.114762Z",
+     "iopub.status.busy": "2022-03-14T21:17:02.114606Z",
+     "iopub.status.idle": "2022-03-14T21:17:02.164278Z",
+     "shell.execute_reply": "2022-03-14T21:17:02.163164Z",
+     "shell.execute_reply.started": "2022-03-14T21:17:02.114743Z"
+    }
+   },
    "outputs": [],
    "source": [
     "summary_mut_escape_dict, summary_activity_wt_dict = pc.summarize_bootstrapped_params()\n",
@@ -322,9 +423,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "7d7aa1b9-8d47-4c27-bb9d-f72c109580e6",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-14T21:17:02.166129Z",
+     "iopub.status.busy": "2022-03-14T21:17:02.165669Z",
+     "iopub.status.idle": "2022-03-14T21:17:02.172992Z",
+     "shell.execute_reply": "2022-03-14T21:17:02.172282Z",
+     "shell.execute_reply.started": "2022-03-14T21:17:02.166083Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Ensure center summary stats are still probabilities\n",
@@ -334,9 +443,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "b1b41bb6-7443-42ba-9e6e-dd701a2f1349",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-14T21:17:02.174129Z",
+     "iopub.status.busy": "2022-03-14T21:17:02.173871Z",
+     "iopub.status.idle": "2022-03-14T21:17:02.265145Z",
+     "shell.execute_reply": "2022-03-14T21:17:02.264151Z",
+     "shell.execute_reply.started": "2022-03-14T21:17:02.174108Z"
+    }
+   },
    "outputs": [],
    "source": [
     "test_list_copy = pc_copy.make_predictions(variants_df=boot_df)\n",
@@ -346,9 +463,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "99084510-3800-4e82-bd3a-862bc7d483cb",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-14T21:17:02.266763Z",
+     "iopub.status.busy": "2022-03-14T21:17:02.266378Z",
+     "iopub.status.idle": "2022-03-14T21:17:02.309670Z",
+     "shell.execute_reply": "2022-03-14T21:17:02.309039Z",
+     "shell.execute_reply.started": "2022-03-14T21:17:02.266735Z"
+    }
+   },
    "outputs": [],
    "source": [
     "(\n",
@@ -360,10 +485,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "8862a4d5-5e9b-4f09-be89-de5702805e18",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-14T21:17:02.310873Z",
+     "iopub.status.busy": "2022-03-14T21:17:02.310559Z",
+     "iopub.status.idle": "2022-03-14T21:17:02.909195Z",
+     "shell.execute_reply": "2022-03-14T21:17:02.908548Z",
+     "shell.execute_reply.started": "2022-03-14T21:17:02.310850Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 0)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Test that different seeds result in differnt results\n",
     "pc2.fit_models(fit_site_level_first=False)"
@@ -371,9 +515,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "7d9b5395-f683-415c-9661-31afc3c7b6b8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-14T21:17:02.910586Z",
+     "iopub.status.busy": "2022-03-14T21:17:02.910218Z",
+     "iopub.status.idle": "2022-03-14T21:17:03.031432Z",
+     "shell.execute_reply": "2022-03-14T21:17:03.030617Z",
+     "shell.execute_reply.started": "2022-03-14T21:17:02.910558Z"
+    }
+   },
    "outputs": [],
    "source": [
     "test_list_2 = pc2.make_predictions(variants_df=boot_df)\n",
@@ -386,9 +538,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "8d98905e-fc1a-4f8c-8119-218a971ad293",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-14T21:17:03.033007Z",
+     "iopub.status.busy": "2022-03-14T21:17:03.032680Z",
+     "iopub.status.idle": "2022-03-14T21:17:03.037342Z",
+     "shell.execute_reply": "2022-03-14T21:17:03.036718Z",
+     "shell.execute_reply.started": "2022-03-14T21:17:03.032982Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "assert not agg_results_2.equals(agg_results)\n",
